# komposto.ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.mid
include/: complexity.hpp  composer.hpp  composition.hpp  composition_generator.hpp  composition_to_midi.hpp  constants.hpp  demo.hpp  demo_menu.hpp  demos.hpp  dynamic_range.hpp  dynamic_range_compression.hpp  dynamic_range_distribution.hpp  dynamic_range_naturaliser.hpp  dynamics.hpp  dynamics_generator.hpp  harmonic_complexity.hpp  harmonic_naturaliser.hpp  harmonic_richness.hpp  harmonizer.hpp  komposto_types.hpp  motif.hpp  motif_generator.hpp  motif_modulator.hpp  motif_mutator.hpp  naturaliser.hpp  note.hpp  notes_to_midi.hpp  palette.hpp  palette_generator.hpp  pattern.hpp  pattern_generator.hpp  pattern_mutator.hpp  random.hpp  ratio.hpp  rhythmic_complexity.hpp  rhythmic_motif.hpp  rhythmic_motif_generator.hpp  rhythmic_naturaliser.hpp  rhythmic_richness.hpp  richness.hpp  (+8 more)
src/: composition.cpp  composition_generator.cpp  demo.cpp  demo_menu.cpp  dynamics.cpp  dynamics_generator.cpp  harmonizer.cpp  main.cpp  motif_generator.cpp  motif_mutator.cpp  note.cpp  notes_to_midi.cpp  palette.cpp  palette_generator.cpp  pattern.cpp  pattern_generator.cpp  random.cpp  ratio.cpp  rhythmic_motif_generator.cpp  section.cpp  section_generator.cpp  timing.cpp  tone.cpp  tone_picker.cpp  tuning_provider.cpp  utilities.cpp
